--- a/Covid-19App/Storyboards/Base.lproj/HomeTab.storyboard
+++ b/Covid-19App/Storyboards/Base.lproj/HomeTab.storyboard
@@ -16,18 +16,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Global Statistics" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oqr-mw-tbs">
-                                <rect key="frame" x="40" y="108" width="334" height="43"/>
+                                <rect key="frame" x="15" y="108" width="384" height="36"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="mol-Xp-NcT" firstAttribute="trailing" secondItem="Oqr-mw-tbs" secondAttribute="trailing" constant="40" id="4AE-PO-5Vx"/>
-                            <constraint firstItem="Oqr-mw-tbs" firstAttribute="top" secondItem="mol-Xp-NcT" secondAttribute="top" constant="20" id="Bva-WL-f4c"/>
-                            <constraint firstItem="Oqr-mw-tbs" firstAttribute="leading" secondItem="mol-Xp-NcT" secondAttribute="leading" constant="40" id="wye-9g-1gg"/>
+                            <constraint firstItem="Oqr-mw-tbs" firstAttribute="top" secondItem="mol-Xp-NcT" secondAttribute="top" constant="20" id="Fv4-ue-hAa"/>
+                            <constraint firstItem="mol-Xp-NcT" firstAttribute="trailing" secondItem="Oqr-mw-tbs" secondAttribute="trailing" constant="15" id="RAg-B4-yOg"/>
+                            <constraint firstItem="Oqr-mw-tbs" firstAttribute="leading" secondItem="mol-Xp-NcT" secondAttribute="leading" constant="15" id="a1N-aR-II4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="mol-Xp-NcT"/>
                     </view>
